@@ -144,7 +144,7 @@ if ($mw_basic[cf_admin_dhtml] && $is_admin && !$is_dhtml_editor) {
 }
 
 // 모바일 접근시 에디터 사용안함
-if (preg_match("/(iphone|samsung|lgte|mobile|BlackBerry|android|windows ce|mot|SonyEricsson)/i", $_SERVER[HTTP_USER_AGENT])) {
+if (mw_agent_mobile()) {
     $is_dhtml_editor = false;
 }
 
