@@ -555,7 +555,7 @@ if ($mw_basic[cf_read_level] && $mw_basic[cf_read_level_own] <= $member[mb_level
 
 // 모바일
 if ($w == '' || $w == 'r') {
-    if (preg_match("/(iphone|samsung|lgte|mobile|BlackBerry|android|windows ce|mot|SonyEricsson)/i", $_SERVER[HTTP_USER_AGENT])) {
+    if (mw_agent_mobile()) {
         sql_query("update $write_table set wr_is_mobile = '1' where wr_id = '$wr_id'", false);
     }
     $write_run_time = mw_time_log($write_run_time, "[write] update is_mobile");
